--- a/app/Modulos/AdministracionDatos/AdministracionDatos.html
+++ b/app/Modulos/AdministracionDatos/AdministracionDatos.html
@@ -1,5 +1,6 @@
 <div class="row" style="padding: 2% 10%">
-    <div class="col-sm-12" style="margin-bottom: 80px">
+
+    <div class="col-sm-12" ng-if="administracionDatosCtrl.mostrarSecciones" style="margin-bottom: 80px">
         <!-- TABS -->
         <div class="table tabs-below" style="margin-top: 15px">
             <ul class="nav nav-tabs">
