--- a/app/Modulos/AdministracionDatos/Categoria/modals/productoM.html
+++ b/app/Modulos/AdministracionDatos/Categoria/modals/productoM.html
@@ -35,7 +35,8 @@
                                            limpiar="perPersonaCtrl.limpiarArchivoProductoE"
                                            requerido="true"
                                            validacion-form="form"
-                                           acepta="image/jpeg,image/gif,image/png,image/x-eps">
+                                           acepta="image/jpeg,image/gif,image/png,image/x-eps"
+                                           nombre-archivo-editable="categoriaCtrl.catProductoEditable.imagen">
                             </ecommers-file>
                         </div>
                     </div>
