--- a/app/Modulos/BarraFooter/BarraFooter.html
+++ b/app/Modulos/BarraFooter/BarraFooter.html
@@ -7,15 +7,15 @@
                 <div class="col-sm-9">&nbsp;&nbsp;&nbsp;</div>
                 <div class="col-md-3">
                     <a target="_blank"
-                       href="">
+                       href="https://www.facebook.com/JuuaanQaarlos/">
                         <img src="img/redesSociales/facebook.png">
                     </a>&nbsp;&nbsp;&nbsp;
                     <a target="_blank"
-                       href="">
+                       href="https://twitter.com/">
                         <img src="img/redesSociales/twitter.png">
                     </a>&nbsp;&nbsp;&nbsp;
                     <a target="_blank"
-                       href="">
+                       href="https://www.youtube.com/">
                         <img src="img/redesSociales/youtube.png">
                     </a>
                 </div>
