--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,9 @@
     <link rel='stylesheet' href='librerias/kendo/styles/kendo.bootstrap.mobile.min.css'>
     <link rel='stylesheet' href='css/easpayb-kendo.css'>
     <link rel='stylesheet' href='bower_components/angular-ui-carousel/dist/ui-carousel.css'>
+    <link rel="stylesheet" type="text/css" href="bower_components/ngGallery/src/css/screen.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/ngGallery/src/css/ngGallery.css">
+
 
   </head>
   <body charset="UTF-8" ng-controller="ECommersControlador as eCommersCtrl" style="overflow: auto">
@@ -44,6 +47,7 @@
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-toastr/dist/angular-toastr.tpls.js"></script>
     <script src="bower_components/angular-clipboard/angular-clipboard.js"></script>
+    <script src="bower_components/angular-webstorage/angular-webstorage.js"></script>
 
     <!-- Kendo UI -->
     <script src="librerias/kendo/js/kendo.all.min.js"></script>
@@ -55,6 +59,7 @@
     <script src="bower_components/angular-ui-carousel/dist/ui-carousel.js"></script>
     <script src="bower_components/lodash/lodash.js"></script>
     <script src="bower_components/moment/moment.js"></script>
+    <script src="bower_components/ngGallery/src/js/ngGallery.js"></script>
 
     <!-- Modulos: eAspayb -->
     <script src="ecommers.module.js"></script>
